FullQa New/src/objects/Opportunity_Product_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>UnDelete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Id__c</fullName>
        <label>Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product Histories</relationshipLabel>
        <relationshipName>Opportunity_Product_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Updated_Fields__c</fullName>
        <label>Updated Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Opportunity Product History</label>
    <nameField>
        <displayFormat>OPH-{000000}</displayFormat>
        <label>Opportunity Product History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>